# rust-chip8

./: .gitignore  Cargo.toml  LICENSE  README.md
lib/egui_sdl2_platform/src/: conversions.rs
roms/: Quasar.ch8  Quasar.txt  credits.txt
src/: config.rs  constants.rs  fonts.rs  main.rs  platform.rs  utils.rs
src/chip8/: cpu.rs  memory.rs  mod.rs  video.rs
src/chip8/components/: cpu.rs
src/chip8/components/cpu/: program_counter.rs  registers.rs  stack.rs
src/chip8/cpu/: input_buffer.rs  program_counter.rs  registers.rs  stack.rs
src/components/: cpu.rs  gpu.rs  memory.rs  mod.rs  processor.rs  video.rs
src/components/cpu/: input_buffer.rs
src/devices/: display.rs  keypad.rs  mod.rs  tape.rs
src/fonts/: chip8.rs  mod.rs
src/models/: input_buffer.rs  mod.rs  registers.rs  sprite.rs  stack.rs  timer.rs
src/peripherals/: audio.rs  display.rs  keypad.rs  mod.rs  tape.rs
src/platform/: mod.rs  platform.rs  renderer.rs
src/platform/devices/: audio.rs  display.rs  keypad.rs  mod.rs  tape.rs
src/platform/devices/audio/: waveforms.rs
src/utils/: compiler.rs  decompiler.rs  mod.rs
