[package]
name = "rust-chip8"
version = "0.1.0"
edition = "2021"
authors = ["Geoff Ballard <geoffreyballard@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
beep = "0.3.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
eyre = "0.6.8"
futures-util = "0.3.25"
log = "0.4.17"
rand = "0.8.5"
sdl2 = { version = "^0.35", features=["ttf"]}
tokio = { version="1.24.1", features=["full"] }
