[package]
name = "rust-chip8"
version = "1.0.0"
edition = "2021"
authors = ["Geoffrey Ballard <geoffreyballard@gmail.com>"]

[dependencies]
dotenv = "0.15.0"
egui = "0.27.2"
egui_sdl2_platform = { path = "./lib/egui_sdl2_platform", features = [
    "sdl2_ttf",
] }
egui_wgpu_backend = "0.29.0"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
wgpu = "0.20.1"
