[package]
name = "rust-chip8"
version = "1.0.0"
description = "Rust-based CHIP-8 emulator based on the original specification"
authors = ["Geoffrey Ballard <geoffreyballard@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
sdl2 = { version = "^0.35", features = ["ttf"] }
